<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="settings" translatable="false">Настройки</string>
    <string name="search" translatable="false">Поиск</string>
    <string name="library" translatable="false">Медиатека</string>
    <string name="dark_theme" translatable="false">Темная тема</string>
    <string name="share_app" translatable="false">Поделиться приложением</string>
    <string name="support" translatable="false">Написать в поддержку</string>
    <string name="user_agreement" translatable="false">Пользовательское соглашение</string>
    <string name="practicum_android_link" translatable="false">https://practicum.yandex.ru/learn/android-developer</string>
    <string name="my_email" translatable="false">maximrymin15@gmail.com</string>
    <string name="support_title" translatable="false">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_message" translatable="false">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_agreement_link" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="mail_intent_data" translatable="false">mailto:</string>
    <string name="intent_type_text" translatable="false">text/plain</string>
    <string name="search_title" translatable="false">Поиск</string>
    <string name="track_name_ph" translatable="false">Artist name</string>
    <string name="track_artist_ph" translatable="false">Name</string>
    <string name="track_time_ph" translatable="false">0:00</string>
    <string name="not_found_text" translatable="false">Ничего не нашлось</string>
    <string name="update" translatable="false">Обновить</string>
    <string name="search_history_text" translatable="false">Вы искали</string>
    <string name="search_history_button" translatable="false">Очистить историю</string>
    <string name="player_name" translatable="false">Название трека</string>
    <string name="player_artist" translatable="false">Имя артиста</string>
    <string name="player_length" translatable="false">Длительность</string>
    <string name="player_timer" translatable="false">00:00</string>
    <string name="player_album" translatable="false">Альбом</string>
    <string name="player_year" translatable="false">Год</string>
    <string name="player_genre" translatable="false">Жанр</string>
    <string name="player_country" translatable="false">Страна</string>
    <string name="no_service_text" translatable="false">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>


    <string name="new_playlist_btn" translatable="false">Новый плейлист</string>
    <string name="library_playlist_error" translatable="false">Вы не создали\nни одного плейлиста</string>
    <string name="library_favorites_error" translatable="false">Ваша медиатека пуста</string>
    <string name="favorites_tab_title" translatable="false">Избранные треки</string>
    <string name="playlists_tab_title" translatable="false">Плейлисты</string>
    <string name="library_error_description" translatable="false">Error Image Description</string>

    <string name="search_nav_text" translatable="false">Поиск</string>
    <string name="library_nav_text" translatable="false">Медиатека</string>
    <string name="settings_nav_text" translatable="false">Настройки</string>
    <string name="playlist_nav_text" translatable="false">Новый плейлист</string>

    <string name="list_title" translatable="false">Имя Плейлиста</string>
    <string name="list_description" translatable="false">Описание Плейлиста</string>
    <string name="list_duration" translatable="false">999 минут</string>
    <string name="list_amount" translatable="false">99 треков</string>

    <string name="edit" translatable="false">Редактировать</string>
    <string name="save" translatable="false">Сохранить</string>

    <plurals name="track_count_plurals" translatable="false">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d трека</item>
    </plurals>

    <plurals name="duration_count_plurals" translatable="false">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минут</item>
        <item quantity="many">%d минуты</item>
        <item quantity="other">%d минут</item>
    </plurals>
</resources>