<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_back"
    tools:context=".MainActivity"
    android:padding="@dimen/layout_padding"
    android:orientation="vertical">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="@dimen/big_text_size"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/top_bottom_padding"
        android:paddingBottom="@dimen/top_bottom_padding"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/button_padding"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/search"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/big_text_size"
            app:cornerRadius="@dimen/button_radius"
            app:icon="@drawable/search"
            app:iconGravity="textStart"
            app:iconTint="@color/black"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:layout_marginBottom="@dimen/button_padding"
            android:layout_marginTop="@dimen/button_padding"
            android:layout_weight="1"
            app:cornerRadius="@dimen/button_radius"
            android:text="@string/library"
            android:textColor="@color/black"
            android:fontFamily="@font/ys_display_medium"
            android:textSize="@dimen/big_text_size"
            android:textAllCaps="false"
            app:icon="@drawable/library"
            app:iconGravity="textStart"
            app:iconTint="@color/black"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/button_padding"
            android:backgroundTint="@color/white"
            android:layout_weight="1"
            app:cornerRadius="@dimen/button_radius"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:fontFamily="@font/ys_display_medium"
            android:textSize="@dimen/big_text_size"
            android:textAllCaps="false"
            app:icon="@drawable/settings"
            app:iconGravity="textStart"
            app:iconTint="@color/black"
            />

    </LinearLayout>


</LinearLayout>