<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/layout_padding">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="36dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/back"
            android:paddingEnd="@dimen/top_bottom_padding"
            android:backgroundTint="@color/black"
            android:layout_gravity="center"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="@dimen/big_text_size"
            android:fontFamily="@font/ys_display_medium"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/settings_padding"
        android:paddingBottom="@dimen/settings_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_theme"
            android:textColor="@color/black"
            android:textSize="@dimen/medium_text_size"
            android:fontFamily="@font/ys_display_regular"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            tools:ignore="UseSwitchCompatOrMaterialXml" />


    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/settings_padding"
        android:paddingTop="@dimen/settings_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_app"
            android:textSize="@dimen/medium_text_size"
            android:textColor="@color/black"
            android:fontFamily="@font/ys_display_regular"/>

        <ImageView
            android:layout_width="@dimen/settings_icon_size"
            android:layout_height="@dimen/settings_icon_size"
            app:srcCompat="@drawable/share"
            android:layout_gravity="end"
            tools:ignore="RtlSymmetry" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/settings_padding"
        android:paddingTop="@dimen/settings_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/support"
            android:textColor="@color/black"
            android:textSize="@dimen/medium_text_size"
            android:fontFamily="@font/ys_display_regular"/>

        <ImageView
            android:layout_width="@dimen/settings_icon_size"
            android:layout_height="@dimen/settings_icon_size"
            app:srcCompat="@drawable/support"
            android:layout_gravity="end"
            tools:ignore="RtlSymmetry" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/settings_padding"
        android:paddingTop="@dimen/settings_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_agreement"
            android:textColor="@color/black"
            android:textSize="@dimen/medium_text_size"
            android:fontFamily="@font/ys_display_regular"/>

        <ImageView
            android:layout_width="@dimen/settings_icon_size"
            android:layout_height="@dimen/settings_icon_size"
            app:srcCompat="@drawable/user_agree"
            android:layout_gravity="end"
            tools:ignore="RtlSymmetry" />

    </FrameLayout>

</LinearLayout>